--- a/mariadb/docker-compose.yml
+++ b/mariadb/docker-compose.yml
@@ -7,8 +7,9 @@ services:
     volumes:
       - ./data:/var/lib/mysql
     environment:
-      - MARIADB_USER=bn_moodle
-      - MARIADB_DATABASE=bitnami_moodle
+      - MARIADB_DATABASE=db
+      - MARIADB_USER=admin
+      - MARIADB_PASSWORD=admin123!@#
       - MARIADB_CHARACTER_SET=utf8mb4
       - MARIADB_COLLATE=utf8mb4_unicode_ci
     ports:
@@ -22,17 +23,17 @@ services:
     image: phpmyadmin:5.2
     restart: unless-stopped
     environment:
-      - PMA_HOST=wordpress-mysql
+      - PMA_HOST=db-mariadb
       - PMA_PORT=3306
       - PMA_USER=wordpress
-      - PMA_PASSWORD=wordpress123!@#
+      - PMA_PASSWORD=admin123!@#
       - MYSQL_ROOT_PASSWORD=root123!@#
     ports:
       - '8080:80'
     hostname: db-phpmyadmin
     container_name: db-phpmyadmin
     depends_on:
-      - mysql
+      - mariadb
     networks:
       - db
 
