--- a/magento/builder/dockerfile
+++ b/magento/builder/dockerfile
@@ -41,14 +41,15 @@ RUN docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/i
 
 # Install Magento PHP extensions
 # https://experienceleague.adobe.com/en/docs/commerce-operations/installation-guide/prerequisites/php-settings#verify-installed-extensions
-RUN docker-php-ext-install bcmath
-RUN docker-php-ext-install gd
-RUN docker-php-ext-install iconv
-RUN docker-php-ext-install intl
-RUN docker-php-ext-install pdo_mysql
-RUN docker-php-ext-install soap
-RUN docker-php-ext-install sockets
-RUN docker-php-ext-install zip
+RUN docker-php-ext-install bcmath \
+    gd \
+    iconv \
+    intl \
+    pdo_mysql \
+    soap \
+    sockets \
+    xsl \
+    zip
 
 # Install oAuth
 RUN apt-get update \
@@ -59,11 +60,12 @@ RUN apt-get update \
 	&& echo "extension=oauth.so" > /usr/local/etc/php/conf.d/docker-php-ext-oauth.ini
 
 # Install Node, NVM, NPM and Grunt
-RUN curl -sL https://deb.nodesource.com/setup_6.x | bash - \
-	&& curl https://raw.githubusercontent.com/creationix/nvm/v0.16.1/install.sh | sh \
-	&& apt-get update && apt-get upgrade -y \
-	&& apt-get install nodejs npm -y build-essential \
-	&& npm i -g grunt-cli yarn
+RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -
+RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.39.0/install.sh | sh
+RUN apt-get update  \
+    && apt-get upgrade -y  \
+    && apt-get install -y nodejs build-essential  \
+    && npm i -g grunt-cli yarn
 
 # Install Composer
 RUN	curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --version=2.7.7 --filename=composer
@@ -71,19 +73,19 @@ RUN	curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Install Mailhog
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install golang-go \
 	&& mkdir /opt/go \
-	&& export GOPATH=/opt/go \
-	&& go get github.com/mailhog/mhsendmail
+	&& export GOPATH=/opt/go
+RUN go install github.com/mailhog/MailHog@latest
 
 # Configuring system
 ADD config/php.ini /usr/local/etc/php/php.ini
-COPY docker/bin/* /usr/local/bin/
+COPY bin/* /usr/local/bin/
 RUN chmod +x /usr/local/bin/*
 
 # Link Bash Completion
 COPY config/.bashrc /usr/local/.bashrc
-RUN echo "source /usr/local/.bashrc" >> /root/.bashrc
-RUN echo "source /usr/local/.bashrc" >> /var/www/.bashrc
-RUN echo "source /usr/local/.bashrc" >> ~/.bashrc
+RUN echo "source /usr/local/.bashrc" >> /root/.bashrc \
+    && echo "source /usr/local/.bashrc" >> /var/www/.bashrc \
+    && echo "source /usr/local/.bashrc" >> ~/.bashrc
 
 RUN chmod 777 -Rf /var/www /var/www/.* \
 	&& chown -Rf www-data:www-data /var/www /var/www/.* \
