--- a/magento/docker-compose.yml
+++ b/magento/docker-compose.yml
@@ -37,17 +37,15 @@ services:
       - magento
 
   magento:
-    image: magento:6.5.5-php8.1-apache
+    image: magento:v2
     restart: unless-stopped
     volumes:
-      - ./magento:/var/www/html
+      - magento:/var/www/html
     environment:
-      - magento_DB_HOST=magento-mysql:3306
-      - magento_DB_NAME=magento
-      - magento_DB_USER=magento
-      - magento_DB_PASSWORD=magento123!@#
-      - magento_TABLE_PREFIX=wp_
-      - magento_DEBUG=yes
+      - DB_HOST=magento-mysql:3306
+      - DB_NAME=magento
+      - DB_USER=magento
+      - DB_PASSWORD=magento123!@#
     ports:
       - '80:80'
     hostname: magento
@@ -59,6 +57,8 @@ services:
 
 volumes:
   mysql_data:
+    driver: local
+  magento:
     driver: local
 
 networks:
