--- a/magento/docker-compose.yml
+++ b/magento/docker-compose.yml
@@ -36,16 +36,64 @@ services:
     networks:
       - magento
 
+  elastic-search:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.3
+    volumes:
+      - search_data:/usr/share/elasticsearch/data
+    environment:
+      - node.name=magento-elastic-search
+      - discovery.type=single-node
+      - cluster.name=magento-elastic-cluster
+      - discovery.seed_hosts=magento-elastic-search
+      - cluster.initial_master_nodes=magento-elastic-search
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - 9200:9200
+      - 9300:9300
+    hostname: magento-elastic-search
+    container_name: magento-elastic-search
+    networks:
+      - magento
+
   magento:
     image: magento:v2
     restart: unless-stopped
     volumes:
       - magento:/var/www/html
     environment:
+      - ADMIN_URL=admin
+      - ADMIN_USERNAME=admin
+      - ADMIN_PASSWORD=admin123
+      - ADMIN_FIRST_NAME=Magento
+      - ADMIN_LAST_NAME=Commerce
+      - ADMIN_EMAIL=magento@commerce.com
+      - ADMIN_USE_SECURE=0
+      - ADMIN_SECURITY_KEY=0
+
       - DB_HOST=magento-mysql:3306
       - DB_NAME=magento
       - DB_USER=magento
       - DB_PASSWORD=magento123!@#
+      - DB_PREFIX=
+      - DB_SSL_KEY=
+      - DB_SSL_CERT=
+      - DB_SSL_CA=
+
+      - MAGENTO_URL=http://localhost/
+      - MAGENTO_SECURE_URL=http://localhost/
+      - MAGENTO_LANGUAGE=en_US
+      - MAGENTO_CURRENCY=USD
+      - MAGENTO_TIMEZONE=UTC
+      - MAGENTO_USE_REWRITES=0
+      - MAGENTO_USE_SECURE=0
+      - MAGENTO_MODE=developer
+      - MAGENTO_SESSION_SAVE=db
+      - MAGENTO_SAMPLE_DATA=1
     ports:
       - '80:80'
     hostname: magento
@@ -59,6 +107,8 @@ volumes:
   mysql_data:
     driver: local
   magento:
+    driver: local
+  search_data:
     driver: local
 
 networks:
