--- a/magento/docker-compose.yml
+++ b/magento/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mysql:
-    image: mysql:8.4.1
+    image: mysql:8.0
     restart: always
     cap_add:
       - ALL
@@ -37,15 +37,13 @@ services:
       - magento
 
   elastic-search:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
     volumes:
       - search_data:/usr/share/elasticsearch/data
     environment:
-      - node.name=magento-elastic-search
       - discovery.type=single-node
-      - discovery.seed_hosts=magento-elastic-search
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=false
     ulimits:
       memlock:
         soft: -1
@@ -59,7 +57,7 @@ services:
       - magento
 
   magento:
-    image: magento:v2
+    image: magento:v5
     restart: unless-stopped
     volumes:
       - magento:/var/www/html
@@ -78,8 +76,10 @@ services:
       - DB_USER=magento
       - DB_PASSWORD=magento123!@#
       - DB_PREFIX=
-      - ES_HOST=
-      - ES_PORT=
+
+      - SEARCH_ENGINE=elasticsearch8
+      - ES_HOST=magento-elastic-search
+      - ES_PORT=9200
       - ES_USERNAME=
       - ES_PASSWORD=
 
@@ -88,7 +88,7 @@ services:
       - MAGENTO_LANGUAGE=en_US
       - MAGENTO_CURRENCY=USD
       - MAGENTO_TIMEZONE=UTC
-      - MAGENTO_USE_REWRITES=0
+      - MAGENTO_USE_REWRITES=1
       - MAGENTO_USE_SECURE=0
       - MAGENTO_MODE=developer
       - MAGENTO_SESSION_SAVE=db
