--- a/moodle/builder/dockerfile
+++ b/moodle/builder/dockerfile
@@ -40,20 +40,18 @@ RUN apt-get clean
 RUN docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/include/
 
 # Install PHP extensions
-RUN docker-php-ext-install mysqli
-RUN docker-php-ext-install pdo_mysql
-RUN docker-php-ext-install ctype
-RUN docker-php-ext-install curl
-RUN docker-php-ext-install dom
-RUN docker-php-ext-install gd
-RUN docker-php-ext-install iconv
-RUN docker-php-ext-install intl
-RUN docker-php-ext-install simplexml
-RUN docker-php-ext-install xml
-RUN docker-php-ext-install zip
-RUN docker-php-ext-install tidy
-RUN docker-php-ext-install exif
-RUN docker-php-ext-install soap
+RUN docker-php-ext-install mysqli  \
+    ctype \
+    curl \
+    dom\
+    gd \
+    iconv \
+    intl \
+    simplexml \
+    xml \
+    zip \
+    exif \
+    soap
 
 # Install oAuth
 RUN apt-get update \
@@ -62,14 +60,6 @@ RUN apt-get update \
 	libpcre3-dev \
 	&& pecl install oauth \
 	&& echo "extension=oauth.so" > /usr/local/etc/php/conf.d/docker-php-ext-oauth.ini
-
-# Install Node, NVM, NPM and Grunt
-#RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -
-#RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.39.0/install.sh | sh
-#RUN apt-get update  \
-#    && apt-get upgrade -y  \
-#    && apt-get install -y nodejs build-essential  \
-#    && npm i -g grunt-cli yarn
 
 # Install Composer
 RUN	curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --version=2.7.7 --filename=composer
