--- a/moodle/docker-compose.yml
+++ b/moodle/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:9.0
     restart: always
     cap_add:
       - ALL
@@ -39,9 +39,9 @@ services:
   moodle:
     image: moodle:v4.0.4
     restart: unless-stopped
-    volumes:
-      - ./moodle:/var/www/html
-      - ./data:/home/moodle/data
+#    volumes:
+#      - ./moodle:/var/www/html
+#      - ./data:/home/moodle/data
     environment:
       - MOODLE_DB_TYPE=mysqli
       - MOODLE_DB_HOST=moodle-mysql
